fix(checkboxes): Align checkboxes #73

--- a/resources/css/less/_theme.less
+++ b/resources/css/less/_theme.less
@@ -76,6 +76,7 @@ footer .poweredby img { width: 120px; }
 .col-sm-2.control-label,
 .input-group-addon {
   padding-left: 0;
+  vertical-align: top;
 }
 
 .glyphicon {
