--- a/resources/css/less/_xform-overrides.less
+++ b/resources/css/less/_xform-overrides.less
@@ -40,3 +40,10 @@ span.xfControl {
   font-weight: bold;
 }
 
+// checkboxes
+.xfItemset {
+  display: inline-block;
+  .xfSelectorItem {
+    display: inline-block;
+  }
+}
